# quartic_bspline_extension

./: .gitignore  Doxyfile  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
bspline_cuda/: __init__.py  bindings.cpp  functions.py  kernel.cu  quartic_backward_kernel.cu  quartic_forward_cpu_kernel.cpp  quartic_forward_kernel.cu
bspline_cuda/include/: constants.cuh  device_utils.cuh
docs/source/: api_cpp_cpu.rst  api_cpp_cuda.rst  api_python.rst  conf.py  constants.rst  index.rst  usage.rst  utils.rst
examples/: student_t.py
profiling/: profile_bspline_extension.py
quartic_bspline_extension/: __init__.py  bindings.cpp  quartic_backward_cuda_kernel.cu  quartic_forward_cpu_kernel.cpp  quartic_forward_cuda_kernel.cu
quartic_bspline_extension/include/: constants.cuh  index_utils.cuh
tests/: QuarticBSplinePotential.py  test_bspline_cuda_extension.py  test_bspline_forward.py  test_hello_cuda.py
