[metadata]
name = bspline-extension
version = attr: bspline.__version__
author = 'Florian Thaler'
author_email = 'first-name.last-name@tugraz.at'
description = 'C++ extension for B-spline - CUDA and CPU support'
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++ :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    torch>=2.6.0
    matplotlib>=3.10.1
    PyQt5>=5.15.11

[options.packages.find]
exclude =
    tests*
    examples*
    profiling*